@@ -493,7 +493,13 @@ Java虚拟机**被允许**对满足上述三个条件的无用类进行回收，
 
 ####  3.3 垃圾收集算法
 
+引用计数
 
+复制、拷贝
+
+标记、清除
+
+标记、整理
 
 ### 第3章 虚拟机性能监控、故障处理工具
 
@@ -712,6 +718,8 @@ public static void main(String[] args) {
 设置单个线程栈大小，一般默认 512k~1024k。 -> 等价于 `-XX:ThreadStackSize`
 
 ##### 2.2.4 -Xmn
+
+> 年轻代:老年代 = 1:2
 
 设置年轻代大小，一般不用修改。
 
@@ -1187,6 +1195,500 @@ Exception in thread "main" java.lang.OutOfMemoryError: Metaspace
 - ` -XX:MaxMetaspaceSize`：元空间最大值。默认是-1，即只受限于本地内存大小。
 - `-XX:MetaspaceSize`：元空间初始大小，以字节为单位，达到该值将触发垃圾收集进行类型卸载，同时收集器会对该值进行调整：如果释放了大量的空间，就适当降低该值；否则，再不超过 ` -XX:MaxMetaspaceSize` 的情况下（如果有设置），适当提高该值。
 - ` -XX:MiniMetaspaceFreeRatio`：在垃圾收集之后控制最小的元空间剩余容量的百分比，可减少因为元空间不足导致的垃圾收集频率。类型的还有 `-XX:Max-MetaspaceFreeRatio`，用于控制最大的元空间剩余容量的百分比。
+
+### 番五 垃圾回收器
+
+#### 5.1 垃圾回收器种类
+
+**四大垃圾回收算法：**
+
+1. 引用计数
+2. 复制拷贝 - 浪费空间
+3. 标记、清除 - 碎片化
+4. 标记、整理 - 性能较差
+
+**四大垃圾回收器：**
+
+![image-20220710083841192](images/image-20220710083841192.png)
+
+1. Serial - 串行垃圾回收器
+
+   会中断（暂停）业务线程执行，一个 GC 线程工作
+
+2. Parallel - 并行垃圾回收器
+
+   会中断（暂停）业务线程执行，多个 GC 线程工作，适用于前台交互较弱的场景，例如科学计算、大数据处理
+
+3. CMS - 并发垃圾回收器（ConcMarkSweep）
+
+   **并发标记清除**，用户线程和 GC 线程同时执行（不一定是并行，可能交替执行），不需要停顿用户线程，适用于对响应时间有要求的场景
+
+4. G1
+
+![image-20220710083753810](images/image-20220710083753810.png)
+
+**算法 & 回收器：**
+
+垃圾回收算法是方法论，回收器是对算法的落地实现。
+
+到目前为止还没有完美的收集器出现，更加没有完美的收集器，只是针对**具体应用**采用最合适的垃圾收集器，进行**分代**收集。
+
+#### 5.2 JVM 默认垃圾回收器
+
+##### 5.2.1 查看默认垃圾回收器
+
+`java -XX:+PrintCommandLineFlags -version`
+
+```bash
+PS E:\Workspace\IntelliJ IDEA\Albrus-JVM> java -XX:+PrintCommandLineFlags -version
+-XX:InitialHeapSize=265865728 -XX:MaxHeapSize=4253851648 -XX:+PrintCommandLineFlags -XX:+UseCompressedClassPointers -XX:+UseCompressedOops -XX:-UseLargePagesIndividualAllocation -XX:+UseParallelGC 
+java version "1.8.0_191"
+Java(TM) SE Runtime Environment (build 1.8.0_191-b12)
+Java HotSpot(TM) 64-Bit Server VM (build 25.191-b12, mixed mode)
+```
+
+- **`-XX:+UseParallelGC `**
+
+`jinfo -flag UseParallelGC pid`
+
+##### 5.2.2 默认垃圾回收器
+
+> https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/
+>
+> **Selecting a Collector**
+>
+> Unless your application has rather strict pause time requirements, first run your application and allow the VM to select a collector.
+>
+> If necessary, adjust the heap size to improve performance. If the performance still does not meet your goals, then use the following guidelines as a starting point for selecting a collector:
+>
+> - If the application has a small data set (up to approximately 100 MB), thenselect the serial collector with the option `-XX:+UseSerialGC`.
+> - If the application will be run on a single processor and there are no pause time requirements, then let the VM select the collector, or select the serial collector with the option `-XX:+UseSerialGC`.
+> - If (a) peak application performance is the first priority and (b) there are no pause time requirements or pauses of 1 second or longer are acceptable, then let the VM select the collector, or select the parallel collector with `-XX:+UseParallelGC`.
+> - If response time is more important than overall throughput and garbage collection pauses must be kept shorter than approximately 1 second, then select the concurrent collector with `-XX:+UseConcMarkSweepGC` or `-XX:+UseG1GC`.
+>
+> https://docs.oracle.com/en/java/javase/18/gctuning/introduction-garbage-collection-tuning.html
+>
+> **Selecting a Collector**
+>
+> Unless your application has rather strict pause-time requirements, first run your application and allow the VM to select a collector.
+>
+> If necessary, adjust the heap size to improve performance. If the performance still doesn't meet your goals, then use the following guidelines as a starting point for selecting a collector:
+>
+> - If the application has a small data set (up to approximately 100 MB), then select the serial collector with the option `-XX:+UseSerialGC`.
+> - If the application will be run on a single processor and there are no pause-time requirements, then select the serial collector with the option `-XX:+UseSerialGC`.
+> - If (a) peak application performance is the first priority and (b) there are no pause-time requirements or pauses of one second or longer are acceptable, then let the VM select the collector or select the parallel collector with `-XX:+UseParallelGC`.
+> - If response time is more important than overall throughput and garbage collection pauses must be kept shorter, then select the mostly concurrent collector with `-XX:+UseG1GC`.
+> - If response time is a high priority, then select a fully concurrent collector with `-XX:UseZGC`.
+
+`UseSerialGC`、`UseParallelGC`、`UseConcMarkSweepGC`、`UseParNewGC`、`UseParallelOldGC`、`UseG1GC`
+
+`UseSerialOldGC` - 已废弃
+
+![image-20220710085554621](images/image-20220710085554621.png)
+
+##### 5.2.3 ==可以看出组合关系==
+
+1. Serial
+2. CMS + ParNew
+3. Parallel + ParallelOld
+4. GC
+
+```tex
+Young				Tenured			JVM options
+Serial				Serial			-XX:+UseSerialGC
+Parallel Scavenge	Serial			-XX:+UseParallelGC -XX:-UseParallelOldGC
+Parallel New		Serial			-XX:+UseParNewGC
+Serial				Parallel Old	N/A
+Parallel Scavenge	Parallel Old	-XX:+UseParallelGC -XX:+UseParallelOldGC
+Parallel New		Parallel Old	N/A
+Serial				CMS				-XX:-UseParNewGC -XX:+UseConcMarkSweepGC
+Parallel Scavenge	CMS				N/A
+Parallel New		CMS				-XX:+UseParNewGC -XX:+UseConcMarkSweepGC
+G1									-XX:+UseG1GC
+```
+
+- PS：**UseConcMarkSweepGC is "ParNew" + "CMS" + "Serial Old"**. "CMS" is used most of the time to collect the tenured generation. **=="Serial Old" is used when a concurrent mode failure occurs.==** 
+
+- **JDK 8 默认的垃圾回收器**是 `-XX:+UseParallelGC` 和 `-XX:+UseParallelOldGC`，如果内存较大(超过 4G)，系统对**停顿时间**比较敏感，我们可以使用 ParNew + CMS(`-XX:+UseParNewGC -XX:+UseConcMarkSweepGC`)
+
+- "ParNew" is a stop-the-world, **copying collector** which uses multiple GC threads. **It differs from "Parallel Scavenge" in that it has enhancements that make it usable with CMS.** For example, "ParNew" does the synchronization needed so that it can run during the concurrent phases of CMS.
+
+- Parallel Scavenge 收集器关注点是吞吐量（高效率的利用 CPU），CMS 等垃圾收集器的关注点更多的是用户线程的停顿时间（提高用户体验）。
+
+  所谓吞吐量就是 CPU 中用于运行用户代码的时间与 CPU 总消耗时间的比值。 Parallel Scavenge 收集器提供了很多参数供用户找到最合适的停顿时间或最大吞吐量，如果对于收集器运作不太了解的话，可以选择把内存管理优化交给虚拟机去完成也是一个不错的选择。
+
+![image-20220710090910512](images/image-20220710090910512.png)
+
+- **配置新生代收集器后，对应连线老年代收集器自动激活**
+
+#### 5.3 七大垃圾回收器
+
+![image-20220710090250386](images/image-20220710090250386.png)
+
+##### 5.3.1 GC 约定参数
+
+- DefNew - Default New Generation
+- Tenured - Old
+- ParNew - Parallel New Generation
+- PSYoungGen - Parallel Scavenge
+- ParOldGen - Parallel Old Generation
+
+##### 5.3.2 Server/Client 模式
+
+![image-20220710094452985](images/image-20220710094452985.png)
+
+##### 5.3.3 Serial/Serial Copying
+
+![image-20220710150910717](images/image-20220710150910717.png)
+
+单线程**新生代**垃圾收集器，在进行垃圾回收时，必须暂停用户线程，但是简单、高效、稳定：`-XX:+UseSerialGC`。
+**开启**后：`Serial + Serial Old`，**新生代使用复制算法、老年代使用标记整理算法**。
+
+##### 5.3.4 ParNew
+
+![image-20220710151517647](images/image-20220710151517647.png)
+
+Serial 的并行多线程版本，也是属于**新生代**垃圾收集器，**与 Parallel Scavenge 不同的是，ParNew 可以与 CMS 搭配使用**，`-XX:+UseParNewGC`。
+**开启**后：`ParNew + Serial Old`，只影响新生代，不影响老年代，**新生代使用复制算法、老年代使用标记整理算法**。
+
+:red_circle:`-XX:+UseParNewGC`：在 JDK 8 版本，已经**不推荐**使用了：Java HotSpot(TM) 64-Bit Server VM warning: Using the ParNew young collector with the Serial old collector is deprecated and will likely be removed in a future release 
+
+:red_circle:`-XX:ParallelGCThreads=n`：限制线程数量，默认开启和 CPU 相同数目的线程数
+
+##### 5.3.5 Parallel/Parallel Scavenge
+
+![image-20220710152522865](images/image-20220710152522865.png)
+
+新生代和老年代都使用并行多线程的垃圾收集器，使用复制算法，俗称**吞吐量优先收集器**，`-XX:+UseParallelGC/-XX:+UseParallelOldGC`（可互相激活）。
+**开启**后：**新生代使用复制算法、老年代使用标记整理算法**。
+
+:red_circle:`-XX:ParallelGCThreads=n`：限制线程数量，默认开启和 CPU 相同数目的线程数
+
+与 ParNew 的区别：
+
+- 可控制的吞吐量
+
+  Thoughput=运行用户代码时间/（运行用户代码时间+垃圾收集时间），99/(99+1)=99% 吞吐量。高吞吐量适合高效利用 CPU 时间型任务：后台运算等不需要太多交互的任务
+
+- 自适应调节策略
+
+  虚拟机会根据当前系统的运行情况收集性能监控信息，动态调整参数以提供最合适的停顿时间（`-XX:MaxGCPauseMillis`）或最大吞吐量
+
+##### 5.3.6 Parallel Old
+
+Parallel Old 是 Parallel 的**老年代**版本，使用**标记整理算法**，在 JDK 6 才开始提供。
+在 JDK 6 以前，新生代的 Parallel Scavenge 只能与 Serial Old 搭配。
+`-XX:+UseParallelGC/-XX:+UseParallelOldGC`（可互相激活）。
+
+##### 5.3.7 CMS
+
+![image-20220710155352442](images/image-20220710155352442.png)
+
+`Concurrent Mark Sweep` 是一种适用于**老年代的==并发==标记清除算法**，是一种以获取**最短回收暂停时间**为目标的收集器。
+适合于互联网等B/S架构的服务器上以争取最快的响应速度，CMS 非常适合堆内存大、CPU 核数多的服务器端应用，也是 G1 出现前大型应用首选收集器。
+并发：垃圾回收线程可以与用户线程并发执行。
+
+**开启**后：`-XX:+UseConcMarkSweepGC`，会自动激活 `-XX:+UseParNewGC`，使用 `ParNew + CMS + Serial Old` 的收集组合（**Serial Old 作为 CMS 收集出错后的后备收集器**）：
+
+```bash
+[GC (CMS Initial Mark) [1 CMS-initial-mark: 6758K(6848K)] 8806K(9920K), 0.0000949 secs] [Times: user=0.00 sys=0.00, real=0.00 secs] 
+[CMS-concurrent-mark-start]
+[CMS-concurrent-mark: 0.001/0.001 secs] [Times: user=0.00 sys=0.00, real=0.00 secs] 
+[CMS-concurrent-preclean-start]
+[CMS-concurrent-preclean: 0.000/0.000 secs] [Times: user=0.00 sys=0.00, real=0.00 secs] 
+[CMS-concurrent-abortable-preclean-start]
+[CMS-concurrent-abortable-preclean: 0.000/0.000 secs] [Times: user=0.00 sys=0.00, real=0.00 secs] 
+[GC (CMS Final Remark) [YG occupancy: 2152 K (3072 K)][Rescan (parallel) , 0.0001254 secs][weak refs processing, 0.0000078 secs][class unloading, 0.0001434 secs][scrub symbol table, 0.0002629 secs][scrub string table, 0.0000819 secs][1 CMS-remark: 6758K(6848K)] 8911K(9920K), 0.0006574 secs] [Times: user=0.00 sys=0.00, real=0.00 secs] 
+[CMS-concurrent-sweep-start]
+
+[Full GC (System.gc()) [CMS: 0K->607K(173440K), 0.0249183 secs] 2775K->607K(251456K), [Metaspace: 3192K->3192K(1056768K)], 0.0250132 secs] [Times: user=0.01 sys=0.02, real=0.03 secs] 
+Heap
+ par new generation   total 78144K, used 3475K [0x00000006c2600000, 0x00000006c7ac0000, 0x00000006e1930000)
+  eden space 69504K,   5% used [0x00000006c2600000, 0x00000006c2964e60, 0x00000006c69e0000)
+  from space 8640K,   0% used [0x00000006c69e0000, 0x00000006c69e0000, 0x00000006c7250000)
+  to   space 8640K,   0% used [0x00000006c7250000, 0x00000006c7250000, 0x00000006c7ac0000)
+ concurrent mark-sweep generation total 173440K, used 607K [0x00000006e1930000, 0x00000006ec290000, 0x00000007c0000000)
+ Metaspace       used 3206K, capacity 4496K, committed 4864K, reserved 1056768K
+  class space    used 347K, capacity 388K, committed 512K, reserved 1048576K
+```
+
+- par new generation 
+- concurrent mark-sweep generation
+
+**四个阶段：**
+
+1. 初始标记（Initial Mark）
+
+   STW，标记一下 GC Roots 能直接关联的对象，速度很快
+
+2. 并发标记（Concurrent Mark / PreClean）
+
+   进行 GC Roots 跟踪的过程，和用户线程并发执行（**主要标记过程，标记全部对象**）。
+
+3. 重新标记（Remark）
+
+   STW，修正在“并发标记”阶段，因用户线程继续运行导致标记有变动，有变动那一部分对象需要重新扫描（如果不 STW，那么陷入死胡同永远停不下来进行清除）。
+
+4. 并发清除（Concurrent Sweep）
+
+   清除 GC Roots 不可达对象，可用户线程并发执行。由于最耗时的是**并发标记**和**并发清除**过程，这两大过程都是并发执行，因此从总体来看，CMS 收集器的内存回收是与用户线程并发执行。
+
+**优缺点：**
+
+- （优）并发收集，低 STW
+
+- （缺）并发执行，对 CPU 压力大
+
+  由于**并发**执行，CMS 在收集时与用户线程会**增加对堆内存的占用**。也就是说，CMS 必须要在**老年代堆内存用完之前完成垃圾回收**，否则 CMS 回收失败会触发**担保机制**采用 Serial Old 进行一次 GC，需要**较大停顿时间**
+
+- （却）标记清除算法，会导致大量碎片
+
+  `-XX:CMSFullGCsBeForeCompaction=0(Default: 每次都进行内存整理)`：指定多少次 CMS 收集之后进行一次压缩的 FULL GC
+
+##### 5.3.8 Serial Old
+
+Serial Old 是 Serial 的**老年代**版本，使用**标记整理算法**，JDK 8 不能显示指定使用该收集器。
+在 Server 模式，主要有两个用途：
+
+1. （JDK 5）搭配新生代 Parallel Scavenge 收集器使用（Parallel Scanenge + Serial Old）
+2. **（JDK 8）作为 CMS 收集器的后背垃圾收集方案**
+
+##### 5.3.9 G1
+
+
+
+##### 5.3.10 CMS 补充强化
+
+CMS（Concurrent Mark Sweep）收集器是一种以获取最短回收停顿时间为目标的收集器。它非常符合在注重用户体验的应用上使用，它是 HotSpot 虚拟机第一款真正意义上的并发收集器，它第一次实现了让垃圾收集线程与用户线程（基本上）同时工作。
+从名字中的 Mark Sweep 这两个词可以看出，CMS收集器是一种 “标记-清除”算法实现的，它的运作过程相比于前面几种垃圾收集器来说更加复杂一些。整个过程分为四个步骤：
+
+1. 初始标记： 暂停所有的其他线程(STW)，并记录下gc roots直接能引用的对象，速度很快。
+2. 并发标记： 并发标记阶段就是从GC Roots的直接关联对象开始遍历整个对象图的过程， 这个过程耗时较长但是不需要停顿用户线程， 可以与垃圾收集线程一起并发运行。因为用户程序继续运行，可能会有导致已经标记过的对象状态发生改变。
+3. 重新标记： 重新标记阶段就是为了修正并发标记期间因为用户程序继续运行而导致标记产生变动的那一部分对象的标记记录，这个阶段的停顿时间一般会比初始标记阶段的时间稍长，远远比并发标记阶段时间短。主要用到三色标记里的增量更新算法(见下面详解)做重新标记。
+4. 并发清理： 开启用户线程，同时GC线程开始对未标记的区域做清扫。这个阶段如果有新增对象会被标记为黑色不做任何处理(见下面三色标记算法详解)。
+   **并发重置：**重置本次GC过程中的标记数据。
+
+从它的名字就可以看出它是一款优秀的垃圾收集器，主要优点：并发收集、低停顿。但是它有下面几个明显的缺点：
+
+- 对CPU资源敏感（会和服务抢资源）；
+- 无法处理浮动垃圾(在并发标记和并发清理阶段又产生垃圾，这种浮动垃圾只能等到下一次gc再清理了)；
+- 它使用的回收算法 - “标记-清除”算法，会导致收集结束时会有**大量碎片产生**，当然通过参数 `-XX:+UseCMSCompactAtFullCollection` 可以让 JVM 在执行完**标记清除后再做整理**
+- 执行过程中的**不确定性**，会存在上一次垃圾回收还没执行完，然后垃圾回收又被触发的情况，特别是在并发标记和并发清理阶段会出现，一边回收，系统一边运行，也许没回收完就再次触发 FULL GC，也就是"concurrent mode failure"，此时会进入 stop the world，用 Serial Old 垃圾收集器来回收
+
+CMS的相关核心参数：
+
+- `-XX:+UseConcMarkSweepGC`：启用 CMS
+- `-XX:ConcGCThreads`：并发的 GC 线程数
+- `-XX:+UseCMSCompactAtFullCollection`：Full GC 之后做压缩整理（减少碎片）
+- `-XX:CMSFullGCsBeforeCompaction`：多少次 Full GC 之后压缩一次，默认是 0，代表每次 Full GC 后都会压缩一次
+- `-XX:CMSInitiatingOccupancyFraction`: 当老年代使用达到该比例时会触发 Full GC（默认是92，这是百分比）
+- `-XX:+UseCMSInitiatingOccupancyOnly`：只使用设定的回收阈值(`-XX:CMSInitiatingOccupancyFraction` 设定的值)，如果不指定，JVM仅在第一次使用设定值，后续则会自动调整
+- `-XX:+CMSScavengeBeforeRemark`：在 CMS GC 前启动一次 minor gc，目的在于减少老年代对年轻代的引用，**降低 CMS GC 的标记阶段时的开销**，一般 CMS 的 GC 耗时 80% 都在标记阶段
+- `-XX:+CMSParallellnitialMarkEnabled`：表示在初始标记的时候多线程执行，缩短 STW
+- `-XX:+CMSParallelRemarkEnabled`：在重新标记的时候多线程执行，缩短 STW
+
+##### 5.3.11 实战：亿级流量电商系统如何优化JVM参数设置(ParNew + CMS)
+
+大型电商系统后端现在一般都是拆分为多个子系统部署的，比如，商品系统，库存系统，订单系统，促销系统，会员系统等等。
+
+以核心的订单系统为例，如下：
+
+![在这里插入图片描述](images/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDY5MTI3OQ==,size_16,color_FFFFFF,t_70-16574188344172.png)
+
+对于 8G 内存，我们一般是分配 4G 内存给 JVM，正常的 JVM 参数配置：
+`-Xms3072M -Xmx3072M -Xss1M -XX:MetaspaceSize=256M -XX:MaxMetaspaceSize=256M -XX:SurvivorRatio=8`
+
+这样设置可能会由于动态对象年龄判断原则导致频繁 FULL GC，于是我们可以更新下JVM参数设置（**调整新生代大小**）：
+`-Xms3072M -Xmx3072M -Xmn2048M -Xss1M -XX:MetaspaceSize=256M -XX:MaxMetaspaceSize=256M -XX:SurvivorRatio=8`
+
+![在这里插入图片描述](images/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDY5MTI3OQ==,size_16,color_FFFFFF,t_70-16574188518994.png)
+
+这样就降低了因为对象动态年龄判断原则导致的对象频繁进入老年代的问题，**其实很多优化无非就是让短期存活的对象尽量都留在 Survivor 里**，不要进入老年代，这样在 minor gc 的时候这些对象都会被回收，不会进到老年代从而导致 FULL GC。
+
+对于对象年龄应该为多少才移动到老年代比较合适，本例中一次 minor gc 要间隔二三十秒，大多数对象一般在几秒内就会变为垃圾，完全可以将默认的 15 岁改小一点，比如改为 5，那么意味着对象要经过 5 次 minor gc 才会进入老年代，整个时间也有一两分钟了，如果对象这么长时间都没被回收，完全可以认为这些对象是会存活的比较长的对象，可以移动到老年代，而不是继续一直占用 Survivor 区空间。
+对于多大的对象直接进入老年代(参数 `-XX:PretenureSizeThreshold`)，这个一般可以结合你自己系统看下有没有什么大对象生成，预估下大对象的大小，一般来说设置为 1M 就差不多了，很少有超过 1M 的大对象，这些对象一般就是你系统初始化分配的缓存对象，比如大的缓存 `List`、`Map` 之类的对象。
+
+可以适当调整JVM参数如下：
+`-Xms3072M -Xmx3072M -Xmn2048M -Xss1M -XX:MetaspaceSize=256M -XX:MaxMetaspaceSize=256M -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=5 -XX:PretenureSizeThreshold=1M`
+
+对于 JDK 8 默认的垃圾回收器是 `-XX:+UseParallelGC -XX:+UseParallelOldGC`，如果内存较大(超过 4G，只是经验值)，系统对停顿时间比较敏感，我们可以使用 ParNew + CMS(`-XX:+UseParNewGC -XX:+UseConcMarkSweepGC`)
+对于老年代 CMS 的参数如何设置我们可以思考下，首先我们想下当前这个系统有哪些对象可能会长期存活躲过 5 次以上 minor gc 最终进入老年代：
+无非就是**那些 Spring 容器里的 Bean**、**线程池对象**、**初始化缓存数据对象**等，这些加起来充其量也就几十 MB。
+还有就是某次 minor gc 完了之后还有超过一两百 M 的对象存活，那么就会直接进入老年代，比如突然某一秒瞬间要处理五六百单，那么每秒生成的对象可能有一百多 M，再加上整个系统可能压力剧增，一个订单要好几秒才能处理完，下一秒可能又有很多订单过来。
+我们可以估算下大概每隔五六分钟出现一次这样的情况，那么大概半小时到一小时之间就可能因为老年代满了触发一次 Full GC，Full GC 的触发条件还有我们之前说过的老年代空间分配担保机制，历次的 minor gc 挪动到老年代的对象大小肯定是非常小的，所以几乎不会在 minor gc 触发之前由于老年代空间分配担保失败而产生 FULL GC，其实在半小时后发生 FULL GC，这时候已经过了抢购的最高峰期，后续可能几小时才做一次 FULL GC。
+
+对于碎片整理，因为都是 1 小时或几小时才做一次 FULL GC，是可以每做完一次就开始碎片整理，或者两到三次之后再做一次也行。
+综上，只要年轻代参数设置合理，老年代 CMS 的参数设置基本都可以用默认值，如下所示：
+`-Xms3072M -Xmx3072M -Xmn2048M -Xss1M -XX:MetaspaceSize=256M -XX:MaxMetaspaceSize=256M -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=5 -XX:PretenureSizeThreshold=1M -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=92 -XX:+UseCMSCompactAtFullCollection -XX:CMSFullGCsBeforeCompaction=3`
+
+##### 5.3.12 三色标记
+
+在**并发**标记的过程中，因为标记期间应用线程还在继续跑，对象间的引用可能发生变化，**多标和漏标**的情况就有可能发生。
+这里我们引入“三色标记”来给大家解释下，把 GC Roots 可达性分析遍历对象过程中遇到的对象， 按照“是否访问过”这个条件标记成以下三种颜色：
+
+- **黑色**：表示对象已经被垃圾收集器访问过，且这个对象的所有引用都已经扫描过。黑色的对象代表已经扫描过，它是安全存活的，如果有其他对象引用指向了黑色对象，无须重新扫描一遍。黑色对象不可能直接（不经过灰色对象）指向某个白色对象。
+- **灰色**：表示对象已经被垃圾收集器访问过，但这个对象上至少存在一个引用还没有被扫描过。
+- **白色**：表示对象尚未被垃圾收集器访问过。显然在可达性分析刚刚开始的阶段，所有的对象都是白色的，若在分析结束的阶段，仍然是白色的对象，即代表不可达。
+
+![在这里插入图片描述](images/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDY5MTI3OQ==,size_16,color_FFFFFF,t_70.png)
+
+**多标 - 浮动垃圾**
+在并发标记过程中，如果由于方法运行结束导致部分局部变量(GC Root)被销毁，这个 GC Root 引用的对象之前又被扫描过(被标记为非垃圾对象)，那么本轮 GC 不会回收这部分内存。
+
+这部分本应该回收但是没有回收到的内存，被称之为“浮动垃圾”。浮动垃圾并不会影响垃圾回收的正确性，只是需要等到下一轮垃圾回收中才被清除。
+
+另外，针对并发标记(还有并发清理)开始后产生的新对象，**通常的做法是直接全部当成黑色**，本轮不会进行清除。这部分对象期间可能也会变为垃圾，这也算是浮动垃圾的一部分。
+
+假设已经遍历到 E（变为灰色了），此时应用执行了 objD.fieldE = null (D > E 的引用断开)
+
+![img](images/a50f4bfbfbedab645f94c33e807ac9ca78311e3b.jpeg)
+
+D > E 的引用断开之后，E、F、G 三个对象不可达，应该要被回收的。然而因为 E 已经变为灰色了，其仍会被当作存活对象继续遍历下去。最终的结果是：这部分对象仍会被标记为存活，即本轮 GC 不会回收这部分内存。
+
+**漏标 - 读写屏障**
+漏标会**导致被引用的对象被当成垃圾误删除**，这是严重 BUG，必须解决。
+
+假设 GC 线程已经遍历到 E（变为灰色了），此时应用线程先执行了：
+
+```c
+var G = objE.fieldG; objE.fieldG = null; // 灰色E 断开引用 白色G 
+objD.fieldG = G; // 黑色D 引用 白色G
+```
+
+![img](images/3b292df5e0fe992587f3dae246e438d68cb1715e.jpeg)
+
+此时切回到 GC 线程，因为 E 已经没有对 G 的引用了，所以不会将 G 置为灰色；尽管因为 D 重新引用了 G，但因为 D 已经是黑色了，不会再重新做遍历处理。
+
+最终导致的结果是：G 会一直是白色，最后被当作垃圾进行清除。这直接影响到了应用程序的正确性，是不可接受的。
+
+**不难分析，漏标只有同时满足以下两个条件时才会发生：**
+
+- 一个或者多个黑色对象重新引用了白色对象：即黑色对象成员变量增加了新的引用
+- 灰色对象断开了白色对象的引用（直接或间接的引用）：即灰色对象原来成员变量的引用发生了变化
+
+```c
+var G = objE.fieldG; // 1.读
+objE.fieldG = null; // 2.写
+objD.fieldG = G; // 3.写
+```
+
+在上面三个步骤，我们只需要在任意一个步骤将对象 G 记录起来然后作为灰色对象再次进行遍历（重新标记）即可。
+
+==重新标记是需要 STW 的，因为程序一直跑，那么集合中又会增加新的对象，永远都跑不完。所以，三色标记算法也只能**优化** STW 时间，不能彻底解决 STW 问题。并发标记期间将大量对象提前扫描了一次，减少（优化）了 STW 时间。==
+
+有两种解决方案：
+
+1. 增量更新（Incremental Update）
+
+   增量更新就是当**黑色**对象插入新的**指向白色**对象的引用关系时，就将这个**新插入的引用记录下来**，等并发扫描结束之后，再将这些记录过的引用关系中的**黑色对象为根**， **重新扫描一次**。这可以简化理解为：**黑色对象一旦新插入了指向白色对象的引用之后，它就变回灰色对象了**
+
+   针对**新**引用关系进行记录：黑色 -> 白色：![img](images/443934-20210325194126948-1014403721.png)
+
+   更严厉版本：==黑色新增引用，黑色变灰色重新扫描==：![img](images/443934-20210325194155049-205343745.png)
+
+2. 原始快照（Snapshot At The Beginning，SATB）
+
+   原始快照就是当灰色对象要删除指向白色对象的引用关系时，就将这个**要删除的引用记录下来**，在并发扫描结束之后，再将这些记录过的引用关系中的灰色对象为根，重新扫描一次，这样就能扫描到白色的对象，将白色对象直接标记为黑色(目的就是让这种对象在本轮 GC 清理中能存活下来，待下一轮 GC 的时候重新扫描，这个对象也有可能是浮动垃圾)
+
+   针对**老**引用关系进行记录：灰色 -\\-> 白色：![img](images/443934-20210325194228979-1144898086.png)
+
+   - a 到 b 中，产生了一条由 A 到 C 的引用关系，这里并没有像增量更新那样将 A 或者 C 标为灰色，相反原始快照中允许出现从黑色指向白色的引用。
+   - 而在从 b 到 c 中，删除了由 B 到 C 的引用关系。这时候就需要进行处理，将 C 涂为灰色。
+
+以上无论是对引用关系记录的插入还是删除，虚拟机的记录操作都是通过写屏障实现的。
+
+**写屏障**
+
+给某个对象的成员变量赋值时，其底层代码大概长这样：
+
+```c
+/**
+ * @param field 某对象的成员变量，如 a.b.d
+ * @param new_value 新值，如 null
+ */
+void oop_field_store(oop field, oop new_value) {
+    *field = new_value; // 赋值操作
+}
+```
+
+所谓的写屏障，其实就是指在赋值操作前后，加入一些处理（可以参考AOP的概念）：
+
+```c
+void oop_field_store(oop* field, oop new_value) {
+    pre_write_barrier(field); // 写屏障-写前操作
+    *field = new_value;
+    post_write_barrier(field, value); // 写屏障-写后操作
+}
+```
+
+**写屏障实现 SATB**
+
+当对象 B 的成员变量的引用发生变化时，比如引用消失（`a.b.d = null`），我们可以利用写屏障，**将 B 原来成员变量的引用对象 D 记录下来**：
+
+```c
+void pre_write_barrier(oop* field) {
+    oop old_value = *field; // 获取旧值
+    remark_set.add(old_value); // 记录原来的引用对象
+}
+```
+
+**写屏障实现增量更新**
+
+当对象 A 的成员变量的引用发生变化时，比如新增引用（`a.d = d`），我们可以利用写屏障，**将 A 新的成员变量引用对象 D 记录下来**：
+
+```c
+void post_write_barrier(oop* field, oop new_value) {
+    remark_set.add(new_value); // 记录新引用的对象
+}
+```
+
+**读屏障**
+
+```c
+oop oop_field_load(oop* field) {
+    pre_load_barrier(field); // 读屏障-读取前操作
+    return *field;
+}
+```
+
+读屏障是直接针对第一步：`D d = a.b.d`，当读取成员变量时，一律记录下来：
+
+```c
+void pre_load_barrier(oop* field) {
+    oop old_value = *field;
+    remark_set.add(old_value); // 记录读取到的对象
+}
+```
+
+现代追踪式（可达性分析）的垃圾回收器几乎都借鉴了三色标记的算法思想，尽管实现的方式不尽相同：比如白色/黑色集合一般都不会出现（但是有其他体现颜色的地方）、灰色集合可以通过栈/队列/缓存日志等方式进行实现、遍历方式可以是广度/深度遍历等等。
+对于读写屏障，以 Java HotSpot VM 为例，其并发标记时对漏标的处理方案如下：
+
+- CMS：写屏障 + 增量更新
+- G1：写屏障 + SATB
+- ZGC：读屏障
+
+工程实现中，读写屏障还有其他功能，比如写屏障可以用于记录跨代/区引用的变化，读屏障可以用于支持移动对象的并发执行等。功能之外，还有性能的考虑，所以对于选择哪种，每款垃圾回收器都有自己的想法。
+
+附上一道经典的面试题：
+为什么 G1 用 SATB，CMS 用增量更新？
+个人理解：因为原始快照相对于增量更新效率更高，当然不排除原始快照会在 GC 过程中产生更多的浮动垃圾，因为不需要在重新扫描阶段再次深度扫描被删除的对象。
+而 CMS 对增量引用的根对象会做深度扫描，G1 因为很多对象都位于不同的 region，CMS 就一块老年代区域，重新深度扫描对象的话 G1 的代价会比 CMS 高，所以 G1 选择 SATB 不深度扫描对象，只是简单标记，等到下一轮 GC 再深度扫描。
+**相对于来说原始快照方式比增量更新方式容易产生浮动垃圾，但是效率比增量更新要高。**
+而 ZGC 有一个标志性的设计是它采用的染色指针技术，染色指针可以大幅减少在垃圾收集过程中内存屏障的使用数量，设置内存屏障，尤其是写屏障的目的通常是为了记录对象引用的变动情况，如果讲这些信息直接维护在指针中，显然可以省去一些专门的记录操作。而 ZGC 没有使用写屏障，只使用了读屏障，显然对性能大有裨益的。
+
+##### 5.3.13 如何选择
+
+SerialGC 串行收集器 复制算法 新生代 响应速度快 适合单核的客户端应用程序下。
+
+![img](images/webp.webp)
+
+**组合选择：**
+
+- 单 CPU 或小内存，单机程序：`-XX:+UseSerialGC`（复制+标记整理）
+- 多 CPU，需要高吞吐量，如后台计算型应用：`-XX:+UseParallelGC/-XX:+UseParallelOldGC`（复制+标记整理）
+- 多 CPU，追求低停顿时间，需要快速响应如互联网应用：`-XX:+UseConcMarkSweepGC`（复制+标记清除，会产生碎片）
+
+
 
 
 
